src/bootstrap/src/core/builder/cli_paths/snapshots/x_bench.snap
---
source: src/core/builder/cli_paths/tests.rs
expression: bench
---
[Bench] test::Crate
    targets: [aarch64-unknown-linux-gnu]
    - Set({bench::library/alloc})
    - Set({bench::library/alloctests})
    - Set({bench::library/compiler-builtins/compiler-builtins})
    - Set({bench::library/core})
    - Set({bench::library/coretests})
    - Set({bench::library/panic_abort})
    - Set({bench::library/panic_unwind})
    - Set({bench::library/proc_macro})
    - Set({bench::library/rustc-std-workspace-core})
    - Set({bench::library/std})
    - Set({bench::library/std_detect})
    - Set({bench::library/sysroot})
    - Set({bench::library/test})
    - Set({bench::library/unwind})
[Bench] test::CrateLibrustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({bench::compiler})
    - Set({bench::compiler/rustc})
    - Set({bench::compiler/rustc_abi})
    - Set({bench::compiler/rustc_arena})
    - Set({bench::compiler/rustc_ast})
    - Set({bench::compiler/rustc_ast_ir})
    - Set({bench::compiler/rustc_ast_lowering})
    - Set({bench::compiler/rustc_ast_passes})
    - Set({bench::compiler/rustc_ast_pretty})
    - Set({bench::compiler/rustc_attr_parsing})
    - Set({bench::compiler/rustc_baked_icu_data})
    - Set({bench::compiler/rustc_borrowck})
    - Set({bench::compiler/rustc_builtin_macros})
    - Set({bench::compiler/rustc_codegen_llvm})
    - Set({bench::compiler/rustc_codegen_ssa})
    - Set({bench::compiler/rustc_codegen_trust_cg})
    - Set({bench::compiler/rustc_const_eval})
    - Set({bench::compiler/rustc_data_structures})
    - Set({bench::compiler/rustc_driver})
    - Set({bench::compiler/rustc_driver_impl})
    - Set({bench::compiler/rustc_error_codes})
    - Set({bench::compiler/rustc_error_messages})
    - Set({bench::compiler/rustc_errors})
    - Set({bench::compiler/rustc_expand})
    - Set({bench::compiler/rustc_feature})
    - Set({bench::compiler/rustc_fs_util})
    - Set({bench::compiler/rustc_graphviz})
    - Set({bench::compiler/rustc_hashes})
    - Set({bench::compiler/rustc_hir})
    - Set({bench::compiler/rustc_hir_analysis})
    - Set({bench::compiler/rustc_hir_id})
    - Set({bench::compiler/rustc_hir_pretty})
    - Set({bench::compiler/rustc_hir_typeck})
    - Set({bench::compiler/rustc_incremental})
    - Set({bench::compiler/rustc_index})
    - Set({bench::compiler/rustc_index_macros})
    - Set({bench::compiler/rustc_infer})
    - Set({bench::compiler/rustc_interface})
    - Set({bench::compiler/rustc_lexer})
    - Set({bench::compiler/rustc_lint})
    - Set({bench::compiler/rustc_lint_defs})
    - Set({bench::compiler/rustc_llvm})
    - Set({bench::compiler/rustc_log})
    - Set({bench::compiler/rustc_macros})
    - Set({bench::compiler/rustc_metadata})
    - Set({bench::compiler/rustc_middle})
    - Set({bench::compiler/rustc_mir_build})
    - Set({bench::compiler/rustc_mir_dataflow})
    - Set({bench::compiler/rustc_mir_transform})
    - Set({bench::compiler/rustc_monomorphize})
    - Set({bench::compiler/rustc_next_trait_solver})
    - Set({bench::compiler/rustc_parse})
    - Set({bench::compiler/rustc_parse_format})
    - Set({bench::compiler/rustc_passes})
    - Set({bench::compiler/rustc_pattern_analysis})
    - Set({bench::compiler/rustc_privacy})
    - Set({bench::compiler/rustc_proc_macro})
    - Set({bench::compiler/rustc_public})
    - Set({bench::compiler/rustc_public_bridge})
    - Set({bench::compiler/rustc_query_impl})
    - Set({bench::compiler/rustc_resolve})
    - Set({bench::compiler/rustc_sanitizers})
    - Set({bench::compiler/rustc_serialize})
    - Set({bench::compiler/rustc_session})
    - Set({bench::compiler/rustc_span})
    - Set({bench::compiler/rustc_symbol_mangling})
    - Set({bench::compiler/rustc_target})
    - Set({bench::compiler/rustc_thread_pool})
    - Set({bench::compiler/rustc_trait_selection})
    - Set({bench::compiler/rustc_traits})
    - Set({bench::compiler/rustc_transmute})
    - Set({bench::compiler/rustc_ty_utils})
    - Set({bench::compiler/rustc_type_ir})
    - Set({bench::compiler/rustc_type_ir_macros})
    - Set({bench::compiler/rustc_windows_rc})
    - Set({bench::crates/trust-binary-parse})
    - Set({bench::crates/trust-bmc})
    - Set({bench::crates/trust-cache})
    - Set({bench::crates/trust-cert-meter})
    - Set({bench::crates/trust-certify})
    - Set({bench::crates/trust-cg-bridge})
    - Set({bench::crates/trust-convergence})
    - Set({bench::crates/trust-disasm})
    - Set({bench::crates/trust-ir-bridge})
    - Set({bench::crates/trust-lift})
    - Set({bench::crates/trust-loop})
    - Set({bench::crates/trust-machine-sem})
    - Set({bench::crates/trust-mir-extract})
    - Set({bench::crates/trust-os})
    - Set({bench::crates/trust-proof-cert})
    - Set({bench::crates/trust-report})
    - Set({bench::crates/trust-router})
    - Set({bench::crates/trust-spec})
    - Set({bench::crates/trust-spec-elab})
    - Set({bench::crates/trust-strengthen})
    - Set({bench::crates/trust-symex})
    - Set({bench::crates/trust-temporal})
    - Set({bench::crates/trust-thir-lower})
    - Set({bench::crates/trust-types})
    - Set({bench::crates/trust-vc-bridge})
    - Set({bench::crates/trust-vcgen})
    - Set({bench::crates/trust-verifier-api})
    - Set({bench::crates/trust-witness})
    - Set({bench::crates/trust-wp})
[Bench] test::CrateRustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({bench::src/librustdoc, bench::src/tools/trustdoc})
