src/bootstrap/src/core/builder/cli_paths/snapshots/x_build.snap
---
source: src/core/builder/cli_paths/tests.rs
assertion_line: 68
expression: build
---
[Build] compile::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({build::library})
    - Set({build::library/alloc})
    - Set({build::library/compiler-builtins/compiler-builtins})
    - Set({build::library/core})
    - Set({build::library/panic_abort})
    - Set({build::library/panic_unwind})
    - Set({build::library/proc_macro})
    - Set({build::library/rustc-std-workspace-core})
    - Set({build::library/std})
    - Set({build::library/std_detect})
    - Set({build::library/sysroot})
    - Set({build::library/test})
    - Set({build::library/unwind})
[Build] tool::Rustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({build::src/librustdoc, build::src/tools/trustdoc})
