src/bootstrap/src/core/builder/cli_paths/snapshots/x_build_sysroot.snap
---
source: src/core/builder/cli_paths/tests.rs
expression: build sysroot
---
[Build] compile::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({build::library/sysroot})
