src/bootstrap/src/core/builder/cli_paths/snapshots/x_build_trustdoc.snap
---
source: src/core/builder/cli_paths/tests.rs
expression: build trustdoc
---
[Build] tool::Rustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({build::src/tools/trustdoc})
