src/bootstrap/src/core/builder/cli_paths/snapshots/x_check_bootstrap.snap
---
source: src/core/builder/cli_paths/tests.rs
expression: check bootstrap
---
[Check] check::Bootstrap
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::src/bootstrap})
